syntax = "proto3";

package iam.authn.v1;

option go_package = "github.com/FangcunMount/iam-contracts/api/grpc/iam/authn/v1;authnv1";

import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";

// ============= 枚举 =============

enum TokenStatus {
  TOKEN_STATUS_UNSPECIFIED = 0;
  TOKEN_STATUS_VALID = 1;
  TOKEN_STATUS_REVOKED = 2;
  TOKEN_STATUS_EXPIRED = 3;
}

enum TokenType {
  TOKEN_TYPE_UNSPECIFIED = 0;
  TOKEN_TYPE_ACCESS = 1;
  TOKEN_TYPE_REFRESH = 2;
  TOKEN_TYPE_SERVICE = 3;
}

// ============= 通用消息 =============

message OperatorContext {
  string operator_id = 1;
  string operator_name = 2;
  string channel = 3;
  string reason = 4;
  map<string, string> extra = 10;
}

message TokenClaims {
  string token_id = 1;
  string subject = 2;
  string user_id = 3;
  string account_id = 4;
  string issuer = 5;
  repeated string audience = 6;
  string tenant_id = 7;
  google.protobuf.Timestamp issued_at = 10;
  google.protobuf.Timestamp expires_at = 11;
  map<string, string> attributes = 20;
}

message TokenPair {
  string token_type = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Duration expires_in = 4;
}

message TokenMetadata {
  TokenType token_type = 1;
  TokenStatus status = 2;
  google.protobuf.Timestamp issued_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}

// ============= AuthService =============

message VerifyTokenRequest {
  string access_token = 1;
  bool force_remote = 2;
  bool include_metadata = 3;
}

message VerifyTokenResponse {
  bool valid = 1;
  TokenStatus status = 2;
  TokenClaims claims = 3;
  TokenMetadata metadata = 4;
  string failure_reason = 5;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  map<string, string> context = 2;
}
message RefreshTokenResponse {
  TokenPair token_pair = 1;
}

message RevokeTokenRequest {
  string access_token = 1;
  OperatorContext operator = 10;
}
message RevokeTokenResponse {}

message RevokeRefreshTokenRequest {
  string refresh_token = 1;
  OperatorContext operator = 10;
}
message RevokeRefreshTokenResponse {}

message IssueServiceTokenRequest {
  string subject = 1;
  repeated string audience = 2;
  google.protobuf.Duration ttl = 3;
  OperatorContext operator = 10;
  google.protobuf.Struct attributes = 20;
}
message IssueServiceTokenResponse {
  TokenPair token_pair = 1;
}

service AuthService {
  rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
  rpc RevokeRefreshToken(RevokeRefreshTokenRequest) returns (RevokeRefreshTokenResponse);
  rpc IssueServiceToken(IssueServiceTokenRequest) returns (IssueServiceTokenResponse);
}

// ============= JWKSService =============

message GetJWKSRequest {}
message GetJWKSResponse {
  bytes jwks = 1;
  string etag = 2;
  google.protobuf.Timestamp last_modified = 3;
}

service JWKSService {
  rpc GetJWKS(GetJWKSRequest) returns (GetJWKSResponse);
}
