package main

import (
	"context"
	"fmt"
	"log"
	"net"
	"strings"

	authnsdk "github.com/FangcunMount/iam-contracts/pkg/sdk/authn"
	"google.golang.org/grpc"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/metadata"
	"google.golang.org/grpc/status"
)

// å…¨å±€éªŒè¯å™¨
var grpcVerifier *authnsdk.Verifier

// åˆå§‹åŒ–éªŒè¯å™¨
func initGRPCVerifier() error {
	cfg := authnsdk.Config{
		JWKSURL:         "https://iam.example.com/.well-known/jwks.json",
		AllowedAudience: []string{"grpc-service"},
		AllowedIssuer:   "https://iam.example.com",
	}

	var err error
	grpcVerifier, err = authnsdk.NewVerifier(cfg, nil)
	if err != nil {
		return fmt.Errorf("åˆå§‹åŒ–éªŒè¯å™¨å¤±è´¥: %w", err)
	}

	log.Println("âœ… éªŒè¯å™¨åˆå§‹åŒ–æˆåŠŸ")
	return nil
}

// AuthInterceptor ä¸€å…ƒ RPC è®¤è¯æ‹¦æˆªå™¨
func AuthInterceptor() grpc.UnaryServerInterceptor {
	return func(
		ctx context.Context,
		req interface{},
		info *grpc.UnaryServerInfo,
		handler grpc.UnaryHandler,
	) (interface{}, error) {
		// 1. è·³è¿‡ä¸éœ€è¦è®¤è¯çš„æ–¹æ³•
		if isPublicMethod(info.FullMethod) {
			return handler(ctx, req)
		}

		// 2. æå– metadata
		md, ok := metadata.FromIncomingContext(ctx)
		if !ok {
			return nil, status.Error(codes.Unauthenticated, "missing metadata")
		}

		// 3. æå– authorization
		tokens := md.Get("authorization")
		if len(tokens) == 0 {
			return nil, status.Error(codes.Unauthenticated, "missing authorization token")
		}

		// 4. æå– Bearer token
		token := tokens[0]
		if !strings.HasPrefix(token, "Bearer ") {
			return nil, status.Error(codes.Unauthenticated, "invalid authorization format")
		}
		token = strings.TrimPrefix(token, "Bearer ")

		// 2. éªŒè¯ token
		resp, err := grpcVerifier.Verify(ctx, token, nil)
		if err != nil {
			log.Printf("Token éªŒè¯å¤±è´¥: %v", err)
			return nil, status.Error(codes.Unauthenticated, "invalid or expired token")
		}

		// 6. å°†ç”¨æˆ·ä¿¡æ¯æ³¨å…¥ä¸Šä¸‹æ–‡
		ctx = context.WithValue(ctx, "user_id", resp.Claims.UserId)
		ctx = context.WithValue(ctx, "tenant_id", resp.Claims.TenantId)
		ctx = context.WithValue(ctx, "account_id", resp.Claims.AccountId)

		// 7. è°ƒç”¨å®é™…çš„å¤„ç†å‡½æ•°
		return handler(ctx, req)
	}
}

// StreamAuthInterceptor æµå¼ RPC è®¤è¯æ‹¦æˆªå™¨
func StreamAuthInterceptor() grpc.StreamServerInterceptor {
	return func(
		srv interface{},
		ss grpc.ServerStream,
		info *grpc.StreamServerInfo,
		handler grpc.StreamHandler,
	) error {
		// è·³è¿‡å…¬å¼€æ–¹æ³•
		if isPublicMethod(info.FullMethod) {
			return handler(srv, ss)
		}

		// æå–å¹¶éªŒè¯ token
		ctx := ss.Context()
		md, ok := metadata.FromIncomingContext(ctx)
		if !ok {
			return status.Error(codes.Unauthenticated, "missing metadata")
		}

		tokens := md.Get("authorization")
		if len(tokens) == 0 {
			return status.Error(codes.Unauthenticated, "missing authorization token")
		}

		token := strings.TrimPrefix(tokens[0], "Bearer ")
		resp, err := grpcVerifier.Verify(ctx, token, nil)
		if err != nil {
			return status.Error(codes.Unauthenticated, "invalid or expired token")
		}

		// åˆ›å»ºåŒ…è£…çš„ ServerStream
		wrappedStream := &wrappedServerStream{
			ServerStream: ss,
			ctx:          enrichContext(ctx, resp.Claims),
		}

		return handler(srv, wrappedStream)
	}
}

// wrappedServerStream åŒ…è£… ServerStream ä»¥æ³¨å…¥è‡ªå®šä¹‰ä¸Šä¸‹æ–‡
type wrappedServerStream struct {
	grpc.ServerStream
	ctx context.Context
}

func (w *wrappedServerStream) Context() context.Context {
	return w.ctx
}

// enrichContext å°† token claims æ³¨å…¥ä¸Šä¸‹æ–‡
func enrichContext(ctx context.Context, claims interface{}) context.Context {
	// è¿™é‡Œç®€åŒ–å¤„ç†ï¼Œå®é™…é¡¹ç›®ä¸­å¯ä»¥æ ¹æ® claims ç±»å‹æ·»åŠ æ›´å¤šä¿¡æ¯
	return ctx
}

// isPublicMethod åˆ¤æ–­æ˜¯å¦ä¸ºå…¬å¼€æ–¹æ³•
func isPublicMethod(method string) bool {
	publicMethods := []string{
		"/api.HealthService/Check",
		"/api.PublicService/GetVersion",
	}

	for _, pm := range publicMethods {
		if method == pm {
			return true
		}
	}
	return false
}

// getUserID ä»ä¸Šä¸‹æ–‡è·å–ç”¨æˆ· ID
func getUserID(ctx context.Context) (string, bool) {
	userID, ok := ctx.Value("user_id").(string)
	return userID, ok
}

// getTenantID ä»ä¸Šä¸‹æ–‡è·å–ç§Ÿæˆ· ID
func getTenantID(ctx context.Context) (string, bool) {
	tenantID, ok := ctx.Value("tenant_id").(string)
	return tenantID, ok
}

// ===== ç¤ºä¾‹ gRPC æœåŠ¡å®šä¹‰ =====

// è¿™é‡Œåªæ˜¯ç¤ºä¾‹ï¼Œå®é™…é¡¹ç›®ä¸­åº”è¯¥ä½¿ç”¨ protobuf å®šä¹‰

type ExampleServer struct{}

func (s *ExampleServer) GetUserInfo(ctx context.Context, req interface{}) (interface{}, error) {
	userID, ok := getUserID(ctx)
	if !ok {
		return nil, status.Error(codes.Internal, "user id not found")
	}

	tenantID, _ := getTenantID(ctx)

	log.Printf("å¤„ç†è¯·æ±‚ - ç”¨æˆ·: %s, ç§Ÿæˆ·: %s", userID, tenantID)

	return map[string]string{
		"user_id":   userID,
		"tenant_id": tenantID,
		"message":   "success",
	}, nil
}

func (s *ExampleServer) PublicMethod(ctx context.Context, req interface{}) (interface{}, error) {
	log.Println("å¤„ç†å…¬å¼€æ–¹æ³•è¯·æ±‚")
	return map[string]string{
		"message": "this is a public method",
	}, nil
}

// ===== é«˜çº§æ‹¦æˆªå™¨ç¤ºä¾‹ =====

// TenantValidationInterceptor ç§Ÿæˆ·éªŒè¯æ‹¦æˆªå™¨
// å¿…é¡»åœ¨è®¤è¯æ‹¦æˆªå™¨ä¹‹åä½¿ç”¨
func TenantValidationInterceptor(allowedTenants []string) grpc.UnaryServerInterceptor {
	return func(
		ctx context.Context,
		req interface{},
		info *grpc.UnaryServerInfo,
		handler grpc.UnaryHandler,
	) (interface{}, error) {
		tenantID, ok := getTenantID(ctx)
		if !ok {
			return nil, status.Error(codes.PermissionDenied, "tenant information missing")
		}

		// éªŒè¯ç§Ÿæˆ·æƒé™
		allowed := false
		for _, t := range allowedTenants {
			if t == tenantID {
				allowed = true
				break
			}
		}

		if !allowed {
			return nil, status.Error(codes.PermissionDenied, "tenant not allowed")
		}

		return handler(ctx, req)
	}
}

// LoggingInterceptor æ—¥å¿—æ‹¦æˆªå™¨
func LoggingInterceptor() grpc.UnaryServerInterceptor {
	return func(
		ctx context.Context,
		req interface{},
		info *grpc.UnaryServerInfo,
		handler grpc.UnaryHandler,
	) (interface{}, error) {
		userID, _ := getUserID(ctx)
		log.Printf("gRPC è°ƒç”¨: %s, ç”¨æˆ·: %s", info.FullMethod, userID)

		resp, err := handler(ctx, req)

		if err != nil {
			log.Printf("gRPC è°ƒç”¨å¤±è´¥: %s, é”™è¯¯: %v", info.FullMethod, err)
		} else {
			log.Printf("gRPC è°ƒç”¨æˆåŠŸ: %s", info.FullMethod)
		}

		return resp, err
	}
}

func main() {
	// 1. åˆå§‹åŒ–éªŒè¯å™¨
	if err := initGRPCVerifier(); err != nil {
		log.Fatal(err)
	}

	// 2. åˆ›å»º gRPC æœåŠ¡å™¨
	server := grpc.NewServer(
		// ä½¿ç”¨æ‹¦æˆªå™¨é“¾
		grpc.ChainUnaryInterceptor(
			AuthInterceptor(),
			TenantValidationInterceptor([]string{"tenant-123", "tenant-456"}),
			LoggingInterceptor(),
		),
		grpc.ChainStreamInterceptor(
			StreamAuthInterceptor(),
		),
	)

	// 3. æ³¨å†ŒæœåŠ¡ï¼ˆç¤ºä¾‹ï¼‰
	// pb.RegisterYourServiceServer(server, &ExampleServer{})

	// 4. å¯åŠ¨æœåŠ¡å™¨
	listener, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("ç›‘å¬å¤±è´¥: %v", err)
	}

	log.Println("ğŸš€ gRPC æœåŠ¡å™¨å¯åŠ¨åœ¨ :50051")
	log.Println("æ‹¦æˆªå™¨é“¾: Auth â†’ TenantValidation â†’ Logging")

	if err := server.Serve(listener); err != nil {
		log.Fatalf("æœåŠ¡å¯åŠ¨å¤±è´¥: %v", err)
	}
}
